   * Change: Factories being destroyed could cause annoying asserts. Now set to quiet warnings (commit:616f142c6a031fc36aceb05f8c40156c563225bb)
   * Change: Improved Windows installers (ticket:4748)
   * Change: Location of configuration directory (commit:54901bcd1672c9e22db35c66741ec2eda123b491)
   * Fix: Trying not to crash on loading unknown templates (commit:44a1e1085d4811a0ceeeac8406457098f190c4a3, ticket:4581)
   * Fix: Always show template designs (commit:20c70fd00a5f155a5ff465866841591e4a23946e, ticket:4440)
   * Fix: Do not desync when destroying droids with animations (commit:123ded59aedc53dc2344be9807c321774613946f)
   * Fix: Mods not read properly on save-load (commit:bd2bac6a5a81205f131b2bbe6efb41b6129b0c4c)
   * Fix: Can create Mac builds again (commit:32d4fb46776bbf4f30b99f36f3534d06ea23477e, commit:e4491400c34902ee992adbe43fed95f0d401382f)
   * Fix: Player properties names and AI (commit:18ec97beb53fb5c0677e2ccaaec4686edca25fd1, ticket:4628)
   * Fix: Do not try loading videos if none are available (commit:81bf12847181ce7ddc7b096f2049e2c8bb949e35, ticket:4631)
   * Fix: Primary hold order working (commit:27460ef00625c9c2d8594892bd5263896f1afcfb, commit:561bbbc7653927d9326a43657648ccec9a2a34d7)
   * Fix: Try to store designs when they are created (commit:c693e7c11249692bd111c8d51acf024aa107c52e)
   * Fix: Do not show resolutions below 640x480 (commit:3312e06e84f22a2d9c3b2687b9aeda99b8dbe1fc, ticket:4623)
   * Fix: Music not playing on save-load or not playing the right music in skirmish (commit:b016f609d704ce4df022e3a89f4f70f6eaabbee7)
   * Fix: Being put in cheat mode on loading saves (commit:4b91398c86a8d3e1e9c05787768508ad5929dcbc, ticket:4612)
   * Fix: Screenshot crash by not calling QCoreApplication::processEvents() in SDL backend builds for Windows/macOS (commit:aa086e372f83a386bcea251e5f6fa4f73a955ef0, ticket:4714)
 * Graphics: